--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <div class="row px-4">
       <div class="col d-flex ml-3 text-center">
-        <h4 class="align-self-center">حلقه تاریخ‌‌پژوهان و نظریه پژوهان معماری و هنر ایران</h4>
+        <h4 class="align-self-center">حلقۀ تاریخ پژوهان و نظریه‌‌پژوهان معماری و هنر ایران</h4>
       </div>
       <div class="col-1 text-center">
         <img class="w-100" src="/assets/img/asmaneh-logo.png" alt="">
@@ -10,16 +10,25 @@
     </div>
     <div class="row text-center mx-4 mt-3 border border-light border-3 border-right-0 border-left-0 border-bottom-0">
       <div class="col p-3">
-        <h4>صفحه نخست</h4>
+        <h4>صفحۀ نخست</h4>
       </div>
       <div class="col p-3">
-        <h4>درباره</h4>
+        <h4>دربارۀ ما</h4>
       </div>
       <div class="col p-3">
         <h4>تماس</h4>
       </div>
       <div class="col p-3">
-        <h4>۱۳۹۹ ©</h4>
+        <h4 class="d-flex justify-content-around">
+          <a href="https://www.instagram.com/asmaneh.art.and.architecture/"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.instagram.com/asmaneh.art.and.architecture/"><i class="fab fa-telegram-plane"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+        </h4>
+      </div>
+      <div class="col p-3">
+        <h4>
+          ۱۳۹۹ ©
+        </h4>
       </div>
 
     </div>
