--- a/_includes/post-form.html
+++ b/_includes/post-form.html
@@ -65,6 +65,15 @@
         </div>
       </div>
       <div class="row">
+        <div class="col-12">
+          <div class="form-group">
+            <label for="postTags">برچسب‌‌ها</label>
+            <input id="postTags" type="text" value="" data-role="tagsinput" aria-describedby="postTagsHelp" />
+            <small id="postTagsHelp" class="form-text text-muted">بعد از ورود هر برچسب enter بزنید.</small>
+          </div>
+        </div>
+      </div>
+      <div class="row">
       </div>
       <div class="row">
         <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 git" id="featureImg">
@@ -80,8 +89,61 @@
         </div>
       </div>
       <div class="row">
+        <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 git" id="attachPDF">
+          <label>فایل پی‌‌دی‌‌اف پیوست</label>
+          <input type="file" class="uploadImg" id="pdfFile" >
+          <a href="javascript:void(0)" class="uploadGit upload uploadImg btn btn-secondary" id="uploadFPdf" data-commit="upload post pdf attachment" data-path="assets/pdf/" data-name="postSlug">بارگذاری</a>
+          <a href="" class="pdf-link uploadedImg btn btn-success" target="_blank" style="display: none;">نمایش</a>
+          <a href="javascript:void(0)" class="image-delete uploadedImg btn btn-danger" style="display: none;">حذف</a>
+        </div>
+      </div>
+      <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 form-group">
           <label for="postText">متن</label>
+          <p>
+            <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+              راهنما و کدهای نمونه
+            </a>
+          </p>
+          <div class="collapse" id="collapseExample">
+            <div class="card card-body">
+              <table class="table table-sm">
+                <thead>
+                  <tr>
+                    <th scope="col">اقدام</th>
+                    <th scope="col">دستور</th>
+                    <th scope="col">نمونه</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th scope="row">متن لاتین</th>
+                    <td class="text-center" dir="ltr">`text`</td>
+                    <td class="text-center" dir="ltr">`The Present Prospects of Social Art History`</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">تصویر درون متن - سمت چپ</th>
+                    <td class="text-center" dir="ltr">![caption](image-url){: .img-float-left}</td>
+                    <td class="text-center" dir="ltr">![موقعیت مساجد در ایران](/assets/img/posts/4-1.jpg){: .img-float-left}</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">تصویر درون متن - سمت راست</th>
+                    <td class="text-center" dir="ltr">![caption](image-url){: .img-float-right}</td>
+                    <td class="text-center" dir="ltr">![موقعیت مساجد در ایران](/assets/img/posts/4-1.jpg){: .img-float-right}</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">شماره پانویس درون متن</th>
+                    <td class="text-center" dir="ltr">[^n]</td>
+                    <td class="text-center" dir="ltr">[^1]</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">شماره پانویس - انتهای متن</th>
+                    <td class="text-center" dir="ltr">[^n]:text</td>
+                    <td class="text-center" dir="ltr">[^1]:appearance</td>
+                  </tr>
+                </tbody>
+              </table>            </div>
+          </div>
           <textarea data-provide="markdown"  id="editor" class="form-control" placeholder="متن" required></textarea>
         </div>
       </div>
