--- a/_includes/sectionPostTop.html
+++ b/_includes/sectionPostTop.html
@@ -5,17 +5,28 @@
         <div class="h2  border border-3 w-100 border-white p-4 mb-0">
           {{page.title}}
         </div>
+        <div class="d-flex flex-row">
+        {% unless page.authors == 'asmaneh'%}
         {% if pageauthorurl %}
-        <a class="link-dark-box" href="{{pageauthorurl}}">
+          <a class="link-dark-box" href="{{pageauthorurl}}">
+            <div class="h3 py-2 px-3 border border-top-0 border-3 border-white mt-0">
+              {{pageauthor}}
+            </div>
+          </a>
+        {%else%}
           <div class="h3 py-2 px-3 border border-top-0 border-3 border-white mt-0">
             {{pageauthor}}
           </div>
-        </a>
-        {%else%}
-        <div class="h3 py-2 px-3 border border-top-0 border-3 border-white mt-0">
-          {{pageauthor}}
-        </div>
         {%endif%}
+        {% endunless %}
+        {% if page.attachedPDF %}
+        <a class="link-dark-box" href="{{page.attachedPDF}}" target="_blank">
+          <div class="h3 py-2 px-3 border {% unless page.authors == 'asmaneh'%}border-top-0{%endunless%} border-left-0 border-3 border-white mt-0">
+            دانلود <i class="far fa-file-pdf"></i>
+          </div>
+        </a>
+        {% endif %}
+        </div>
       </div>
     </div>
     <div class="row h-100">
