--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -6,10 +6,26 @@ layout: default
 {% assign pagesize = site.posts | where: pagecollection , page.slug | size %}
 <main role="main">
   {% include sectionArchiveTop.html %}
-  <section class="pt-5 bg-light text-dark" style="min-height: 100vh;">
+  <section class="pt-3 bg-light text-dark" style="min-height: 100vh;">
+    <div class="container-fluid px-5 py-0">
+      {% if page.collection == 'types'%}
+      <div class="card-deck">
+        {% assign type-categories = site.categories | where: 'type', page.slug %}
+        {% for category in type-categories %}
+        <div class="card bg-black border-0" >
+          <a class="link-dark-box" href="{{category.url}}">
+          <div class="card-body text-center card-body border border-3 border-black">
+            <h4 class="card-title">{{category.title}}</h3>
+          </div>
+        </a>
+        </div>
+        {% endfor %}
+      </div>
+      {% endif %}
+
+    </div>
     <div class="container-fluid px-5 py-4">
       <div class="row">
-
         {% assign filtered_posts = site.posts | where: pagecollection, page.slug  %}
         {% if page.sortby %}
         {% assign filtered_sort_posts = filtered_posts | sort: 'sortOrder' %}
