--- a/_includes/nav-top.html
+++ b/_includes/nav-top.html
@@ -13,8 +13,8 @@
           <a href="/login" class="mx-1"><img src="/assets/img/tiles/login.png" alt="login" class="nav-icon"></a>
         </div>
         <div class="btn-group rounded-0 user">
-          <a href="/dashboard/" class="btn btn-primary-outline rounded-0 border-0 user-fullname"></a>
-          <button type="button" class="btn btn-primary-outline rounded-0 border-0 dropdown-toggle dropdown-toggle-split" id="dropdownMenuReference" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-reference="parent">
+          <a href="/dashboard/" class="btn border-3 bold bg-transparent {% if page.url == '/'%}border-white text-white{%else%} border-dark {%endif%} rounded-0 user-fullname"></a>
+          <button type="button" class="border-3 bg-transparent {% if page.url == '/'%}border-white text-white{%else%} border-dark {%endif%} border-left-0 mr-1 dropdown-toggle dropdown-toggle-split" id="dropdownMenuReference" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-reference="parent">
             <span class="sr-only">Toggle Dropdown</span>
           </button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuReference">
@@ -30,7 +30,7 @@
 
         {% for item in site.types %}
         {% assign type-categories = site.categories | where: 'type', item.slug %}
-        <div class="btn-group rounded-0">
+        <div class="btn-group rounded-0 my-1">
           <a href="{{item.url}}" {% if item.icon %}class="{% if type-categories.size > 0 %}ml-0 {%else%}mx-1{%endif%}" {%else%}class="btn btn-primary-outline rounded-0 border-0"{%endif%}>{% if item.icon %}<img src="{{item.icon}}" alt="{{item.title}}" class="nav-icon">{%else%}{{item.title}}{% endif%}</a>
           {% if type-categories.size > 0 %}
           <button type="button" class="border-2 bg-transparent {% if page.url == '/'%}border-white text-white{%else%} border-dark {%endif%} border-left-0 mr-1 dropdown-toggle dropdown-toggle-split" id="dropdownMenuReference" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-reference="parent">
