--- a/_includes/sectionArchiveTop.html
+++ b/_includes/sectionArchiveTop.html
@@ -23,15 +23,13 @@
                           </div>
                         </a>
                   </div>
-                  {% else %}
-                  <div class="d-flex flex-row mb-0">
-                    <div class="h5 py-2 px-3 mt-auto border bg-transparent border-3 border-white text-white mb-0 border-top-0 border-left-0">
-                      {{pcollection.title}}
-                    </div>
-                  </div>
                   {% endif %}
-                  <div class="px-3">
-                    <h1 class="card-title">{{page.title}} </h1>
+                  <div>
+                    {% if page.icon %}
+                    <img src="{{page.icon}}" alt="{{page.title}}" class="title-icon">
+                    {% else %}
+                    <h1 class="card-title mx-3">{{page.title}} </h1>
+                    {%endif%}
                     <h4><?php echo $author;  ?></h4>
                     <p class="lead card-text"><?php echo $excerpt;  ?></p>
                   </div>
