--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,5 +1,5 @@
 html, body {
-  font-family: IRANSans, Arial !important;
+  font-family: Calibri, Arial !important;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.65;
