--- a/_includes/post-form.html
+++ b/_includes/post-form.html
@@ -35,7 +35,7 @@
           <label for="poststatus">وضعیت</label>
           <select class="form-control" id="postStatus"  selected='false'>
             <option value="false" id="draft" value="false">پیش‌‌نویس</option>
-            <option value="true" id="published" value="true" class="admin reviewer" style="display:none;">انتشار</option>
+            <option value="true" id="published" value="true" class="admin reviewer" style="display:none;">آماده انتشار</option>
           </select>
         </div>
 
@@ -100,51 +100,7 @@
       <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 form-group">
           <label for="postText">متن</label>
-          <p>
-            <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-              راهنما و کدهای نمونه
-            </a>
-          </p>
-          <div class="collapse" id="collapseExample">
-            <div class="card card-body">
-              <table class="table table-sm">
-                <thead>
-                  <tr>
-                    <th scope="col">اقدام</th>
-                    <th scope="col">دستور</th>
-                    <th scope="col">نمونه</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <th scope="row">متن لاتین</th>
-                    <td class="text-center" dir="ltr">`text`</td>
-                    <td class="text-center" dir="ltr">`The Present Prospects of Social Art History`</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">تصویر درون متن - سمت چپ</th>
-                    <td class="text-center" dir="ltr">![caption](image-url){: .img-float-left}</td>
-                    <td class="text-center" dir="ltr">![موقعیت مساجد در ایران](/assets/img/posts/4-1.jpg){: .img-float-left}</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">تصویر درون متن - سمت راست</th>
-                    <td class="text-center" dir="ltr">![caption](image-url){: .img-float-right}</td>
-                    <td class="text-center" dir="ltr">![موقعیت مساجد در ایران](/assets/img/posts/4-1.jpg){: .img-float-right}</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">شماره پانویس درون متن</th>
-                    <td class="text-center" dir="ltr">[^n]</td>
-                    <td class="text-center" dir="ltr">[^1]</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">شماره پانویس - انتهای متن</th>
-                    <td class="text-center" dir="ltr">[^n]:text</td>
-                    <td class="text-center" dir="ltr">[^1]:appearance</td>
-                  </tr>
-                </tbody>
-              </table>            </div>
-          </div>
-          <textarea data-provide="markdown"  id="editor" class="form-control" placeholder="متن" required></textarea>
+          <textarea id="editor" class="form-control" placeholder="متن"></textarea>
         </div>
       </div>
       <div class="row">
