--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,7 @@
     {% if page.jsFile == 'edit.js' %}<script src="/assets/vendors/bootstrap-markdown.js"></script>{% endif %}
     {% if page.jsFile == 'edit.js' %}<script src="/assets/vendors/bootstrap-markdown.fa.js"></script>{% endif %}
     {% if page.jsFile == 'edit.js' %}<script src="/assets/vendors/bootstrap-tagsinput/tagsinput.js"></script>{% endif %}
+    <script src="/assets/vendors/tinymce/tinymce.min.js" referrerpolicy="origin"></script>
     <script src="/assets/vendors/lightbox/ekko-lightbox.min.js"></script>
   </head>
   <body>
