--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -34,6 +34,10 @@ p {
 .border-3 {
     border-width:3px !important;
 }
+.border-4 {
+    border-width:4px !important;
+}
+.top-img {margin: -3px -3px 0 0 !important;}
 .bg-black {
     background-color: #111111 !important;
 }
