fix borders bug

--- a/_includes/cardHorizental.html
+++ b/_includes/cardHorizental.html
@@ -47,11 +47,11 @@
           </div>
           {%endif%}
           <div class="col-sm mt-2" >
-            <div class="card-body border border-4 border-black mt-0  bg-light p-0">
+            <div class="card-body border border-3 border-black mt-0  bg-light p-0">
               {% unless post.types == page.slug%}
               <div class="d-flex flex-row mb-0  ">
                 <a href="{{topcaturl}}">
-                  <div class="h5 mt-auto border bg-light border-3 border-black mb-0 border-top-0 border-left-0">
+                  <div class="h5 mt-auto bg-light mb-0 border-0">
                     <img src="{{topcatimg}}" alt="{{topcat}}" class="nav-icon top-img">
                   </div>
                 </a>
