--- a/_includes/nav-top.html
+++ b/_includes/nav-top.html
@@ -13,7 +13,7 @@
           <a href="/login" class="mx-1"><img src="/assets/img/tiles/login.png" alt="login" class="nav-icon"></a>
         </div>
         <div class="btn-group rounded-0 user">
-          <a href="/dashboard/" class="btn border-3 bold bg-transparent {% if page.url == '/'%}border-white text-white{%else%} border-dark {%endif%} rounded-0 user-fullname"></a>
+          <a href="/dashboard/" class="btn border-3 bold bg-transparent {% if page.url == '/'%}border-white text-white{%else%} border-dark {%endif%} rounded-0 user-fullname" style="font-weight:bold;"></a>
           <button type="button" class="border-3 bg-transparent {% if page.url == '/'%}border-white text-white{%else%} border-dark {%endif%} border-left-0 mr-1 dropdown-toggle dropdown-toggle-split" id="dropdownMenuReference" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-reference="parent">
             <span class="sr-only">Toggle Dropdown</span>
           </button>
