--- a/_includes/post-form.html
+++ b/_includes/post-form.html
@@ -125,7 +125,7 @@
       </div>
       <div class="row">
         <div class="col-12">
-          <button type="submit" class="btn btn-primary btn-block mb-2">ارسال</button>
+          <button id="send" type="button" class="btn btn-primary btn-block mb-2">ارسال</button>
         </div>
       </div>
       <div class="row text-center" id="alertEdited" style="display:none;">
@@ -138,3 +138,4 @@
     </div>
   </form>
 </section>
+bu
