--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,6 +34,7 @@ layout: default
           {% endfor %}
         </div>
         {% endif %}
+        <button type="button" name="editPost" id="editPost" class="btn btn-primary mx-auto admin editor" data-slug="{{page.slug}}" style="display:none;">ویرایش</button>
       </div>
       <div class="row justify-content-md-center">
         <div class="col col-lg-8 d-flex flex-column text-center">
