--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
 <script type="text/javascript" src="/assets/js/functions.js?v=2.32"></script>
 <script type="text/javascript" src="/assets/js/asmaneh.js?v=2.32"></script>
 {% if page.jsFile %}<script type="text/javascript" src="/assets/js/{{page.jsFile}}?v=2.32"></script>{% endif %}
-{% if page.access == 'users' %}<script src="https://alitayebi.com/asmaneh/dist.js?v=2.32" defer async></script>{% endif %}
+<script src="https://alitayebi.com/asmaneh/dist.js?v=2.32" defer async></script>
 <script>
   window.simpleJekyllSearch = new SimpleJekyllSearch({
     searchInput: document.getElementById('search-input'),
