--- a/_includes/cardHorizental.html
+++ b/_includes/cardHorizental.html
@@ -1,8 +1,9 @@
+{% assign botcat = false %}
 {% for type in post.types %}{% assign typ = site.types | where: 'slug', type | first %}
 {% if typ %}{% assign topcat = typ.title %}{% assign topcatimg = typ.icon %}{% assign topcaturl = typ.url %}{% endif %}
 {% endfor %}
 {% for category in post.categories %}{% assign cat = site.categories | where: 'slug', category | first %}
-{% if cat %}{% assign botcat = cat.title %}{% assign botcaturl = cat.url %}{% else %}{% assign botcat = false %}{% endif %}
+{% if cat %}{% assign botcat = cat.title %}{% assign botcaturl = cat.url %}{% endif %}
 {% endfor %}
 {% for author in post.authors %}{% assign auth = site.authors | where: 'slug', author | first %}
 {% if auth %}
@@ -64,7 +65,7 @@
                 <p class="card-text">{{post.content | truncatewords: 20  | strip_html}}</p>
               </div>
               <div class="d-flex flex-row mb-0 justify-content-end">
-                {% if botcat %}<a class="link-light-box" href="{{botcaturl}}">
+                {% if botcat %}sss<a class="link-light-box" href="{{botcaturl}}">
                     <div class="h5 py-2 px-3 mt-auto border bg-light border-3 border-black mb-0 border-bottom-0 border-right-0">
                       {{botcat}}
                     </div>
