--- a/_includes/cardHorizental.html
+++ b/_includes/cardHorizental.html
@@ -65,7 +65,7 @@
                 <p class="card-text">{{post.content | truncatewords: 20  | strip_html}}</p>
               </div>
               <div class="d-flex flex-row mb-0 justify-content-end">
-                {% if botcat %}sss<a class="link-light-box" href="{{botcaturl}}">
+                {% if botcat %}<a class="link-light-box" href="{{botcaturl}}">
                     <div class="h5 py-2 px-3 mt-auto border bg-light border-3 border-black mb-0 border-bottom-0 border-right-0">
                       {{botcat}}
                     </div>
